--- a/src/components/Label/Label.scss
+++ b/src/components/Label/Label.scss
@@ -3,6 +3,7 @@
 
 .container {
   border: 2px solid #f5f5f5;
-  padding: 20px;
+  padding: 10px 20px 10px 20px;
   max-width: $max-content-width;
+  margin: 10px 0 10px 0;
 }
